Differentiate among three kinds of lines: informative claims, to-do markers and explicit rejections

--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -3,101 +3,112 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_29) PAC Statistical Model Checking for Markov Decision Processes and Stochastic Games.
 	[Pranav Ashok](https://dblp.org/pid/200/8227.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html)
-	Implemented as an extension of [[PRISM-games]]
+	✅ Implemented as an extension of [[PRISM-games]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_36) Run-Time Optimization for Learned Controllers Through Quantitative Games.
 	[Guy Avni](https://dblp.org/pid/07/10110.html), [Roderick Bloem](https://dblp.org/pid/80/1300.html), [Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html), [Bettina Könighofer](https://dblp.org/pid/117/3735.html), [Stefan Pranger](https://dblp.org/pid/244/8267.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_4) Safety and Co-safety Comparator Automata for Discounted-Sum Inclusion.
 	[Suguman Bansal](https://dblp.org/pid/217/4777.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html)
-	Implemented in [[QuIPFly]]
+	✅ Implemented in [[QuIPFly]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_33) Robust Controller Synthesis in Timed Büchi Automata - A Symbolic Approach.
 	[Damien Busatto-Gaston](https://dblp.org/pid/194/2532.html), [Benjamin Monmege](https://dblp.org/pid/85/733.html), [Pierre-Alain Reynier](https://dblp.org/pid/55/5954.html), [Ocan Sankur](https://dblp.org/pid/11/7805.html)
-	Implemented a prototype but it doesn't have a name
+	✅ Implemented a prototype but it doesn't have a name
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_28) Semi-quantitative Abstraction and Analysis of Chemical Reaction Networks.
 	[Milan Ceska](https://dblp.org/pid/213/3728.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_21) Extending [[nuXmv]] with Timed Transition Systems and Timed Temporal Properties.
 	[Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Enrico Magnago](https://dblp.org/pid/244/8257.html), [Marco Roveri](https://dblp.org/pid/83/563.html), [Stefano Tonetta](https://dblp.org/pid/t/StefanoTonetta.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_7) Verifying Hyperliveness.
 	[Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [César Sánchez](https://dblp.org/pid/38/1858.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
-	Implemented in [[MCHyper]], and a tool without a name for the synthesis of strategies and reactive systems from hyperproperties that uses [[Z3]]
+	✅ Implemented in [[MCHyper]], and a tool without a name for the synthesis of strategies and reactive systems from hyperproperties that uses [[Z3]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_1) Symbolic Register Automata.
 	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Tiago Ferreira](https://dblp.org/pid/201/3471.html), [Matteo Sammartino](https://dblp.org/pid/120/2179.html), [Alexandra Silva](https://dblp.org/pid/92/1378-1.html)
-	Implemented in [[SVPALib]]
+	✅ Implemented in [[SVPALib]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_20) When Human Intuition Fails - Using Formal Methods to Find an Error in the "Proof" of a Multi-agent Protocol.
 	[Jennifer A. Davis](https://dblp.org/pid/72/871.html), [Laura R. Humphrey](https://dblp.org/pid/144/8597.html), [Derek B. Kingston](https://dblp.org/pid/41/6176.html)
-	Uses AGREE
+	✅ Uses AGREE
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_13) Synthesizing Approximate Implementations for Unrealizable Specifications.
 	[Rayna Dimitrova](https://dblp.org/pid/69/2960.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Hazem Torfah](https://dblp.org/pid/140/9733.html)
-	Implemented approaches, Uses CAQE and MaxCount for solving synthesis instances
+	✅ Implemented approaches, Uses CAQE and MaxCount for solving synthesis instances
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_25) [[VerifAI]] - A Toolkit for the Formal Design and Analysis of Artificial Intelligence-Based Systems.
 	[Tommaso Dreossi](https://dblp.org/pid/117/9140.html), [Daniel J. Fremont](https://dblp.org/pid/144/7602.html), [Shromona Ghosh](https://dblp.org/pid/164/5676.html), [Edward Kim](https://dblp.org/pid/06/445.html), [Hadi Ravanbakhsh](https://dblp.org/pid/134/9799.html), [Marcell Vazquez-Chanlatte](https://dblp.org/pid/192/1518.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_15) Efficient Synthesis with Probabilistic Constraints.
 	[Samuel Drews](https://dblp.org/pid/182/9259.html), [Aws Albarghouthi](https://dblp.org/pid/90/8295.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html)
-	Implemented their algorithm [[τ-DIGITS]]
+	✅ Implemented their algorithm [[τ-DIGITS]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_10) Security-Aware Synthesis Using Delayed-Action Games.
 	[Mahmoud Elfar](https://dblp.org/pid/198/8166.html), [Yu Wang](https://dblp.org/pid/02/5889-44.html), [Miroslav Pajic](https://dblp.org/pid/74/7446.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_11) Automated Hypersafety Verification.
 	[Azadeh Farzan](https://dblp.org/pid/89/148.html), [Anthony Vandikas](https://dblp.org/pid/241/7113.html)
-	Tool: [[Weaver]]
+	✅ Tool: [[Weaver]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_24) [[StreamLAB]] - Stream-based Monitoring of Cyber-Physical Systems.
 	[Peter Faymonville](https://dblp.org/pid/05/7445.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Malte Schledjewski](https://dblp.org/pid/244/8206.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Marvin Stenger](https://dblp.org/pid/189/1078.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html), [Hazem Torfah](https://dblp.org/pid/140/9733.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_14) Quantified Invariants via Syntax-Guided Synthesis.
 	[Grigory Fedyukovich](https://dblp.org/pid/43/8810.html), [Sumanth Prabhu](https://dblp.org/pid/206/6798-1.html), [Kumar Madhukar](https://dblp.org/pid/134/8956.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html)
-	Implemented in [[FreqHorn]]
+	✅ Implemented in [[FreqHorn]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_37) Taming Delays in Dynamical Systems - Unbounded Verification of Delay Differential Equations.
 	[Shenghua Feng](https://dblp.org/pid/232/3100.html), [Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html), [Martin Fränzle](https://dblp.org/pid/34/3263.html), [Bai Xue](https://dblp.org/pid/74/2716-1.html)
-	Implemented, seems to be called [[UDDER]]
+	✅ Implemented, seems to be called [[UDDER]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_35) Temporal Stream Logic - Synthesis Beyond the Bools.
 	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Felix Klein](https://dblp.org/pid/80/8313-1.html), [Ruzica Piskac](https://dblp.org/pid/p/RuzicaPiskac.html), [Mark Santolucito](https://dblp.org/pid/115/9332.html)
-	Implemented but doesn't seem to have a specific name. Uses [[BoSy]]
+	✅ Implemented but doesn't seem to have a specific name. Uses [[BoSy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_3) Fast Algorithms for Handling Diagonal Constraints in Timed Automata.
 	[Paul Gastin](https://dblp.org/pid/g/PaulGastin.html), [Sayan Mukherjee](https://dblp.org/pid/52/5375-2.html), [B. Srivathsan](https://dblp.org/pid/86/8295.html)
-	Implemented in [[TChecker]]
+	✅ Implemented in [[TChecker]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_19) BMC for Weak Memory Models - Relation Analysis for Compact SMT Encodings.
 	[Natalia Gavrilenko](https://dblp.org/pid/244/8281.html), [Hernán Ponce de León](https://dblp.org/pid/57/11444.html), [Florian Furbach](https://dblp.org/pid/157/6706.html), [Keijo Heljanko](https://dblp.org/pid/h/KeijoHeljanko.html), [Roland Meyer](https://dblp.org/pid/86/3051.html)
-	Implemented in [[Dartagnan]]
+	✅ Implemented in [[Dartagnan]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_27) Probabilistic Bisimulation for Parameterized Systems - (with Applications to Verifying Anonymous Protocols).
 	[Chih-Duo Hong](https://dblp.org/pid/00/8296.html), [Anthony W. Lin](https://dblp.org/pid/38/2655.html), [Rupak Majumdar](https://dblp.org/pid/71/1981.html), [Philipp Rümmer](https://dblp.org/pid/79/5611.html)
-	Implementation has no name, uses [[Mona]]
+	✅ Implementation has no name, uses [[Mona]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_18) Proving Unrealizability for Syntax-Guided Synthesis.
 	[Qinheping Hu](https://dblp.org/pid/201/4822.html), [Jason Breck](https://dblp.org/pid/148/1307.html), [John Cyphert](https://dblp.org/pid/211/9268.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html)
-	Implemented in [[NOPE]]
+	✅ Implemented in [[NOPE]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_32) Local and Compositional Reasoning for Optimized Reactive Systems.
 	[Mitesh Jain](https://dblp.org/pid/133/8487.html), [Panagiotis Manolios](https://dblp.org/pid/40/4888.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_12) Automated Synthesis of Secure Platform Mappings.
 	[Eunsuk Kang](https://dblp.org/pid/49/2420.html), [Stéphane Lafortune](https://dblp.org/pid/22/3097.html), [Stavros Tripakis](https://dblp.org/pid/85/6852.html)
-	Implemented as [[Mapping Synthesis Tool]]
+	✅ Implemented as [[Mapping Synthesis Tool]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_26) The [[Marabou]] Framework for Verification and Analysis of Deep Neural Networks.
 	[Guy Katz](https://dblp.org/pid/23/10321.html), [Derek A. Huang](https://dblp.org/pid/244/8209.html), [Duligur Ibeling](https://dblp.org/pid/220/3264.html), [Kyle Julian](https://dblp.org/pid/195/5867.html), [Christopher Lazarus](https://dblp.org/pid/180/3521.html), [Rachel Lim](https://dblp.org/pid/127/9695.html), [Parth Shah](https://dblp.org/pid/147/1126.html), [Shantanu Thakoor](https://dblp.org/pid/218/7437.html), [Haoze Wu](https://dblp.org/pid/195/8725-1.html), [Aleksandar Zeljic](https://dblp.org/pid/147/5994.html), [David L. Dill](https://dblp.org/pid/d/DavidLDill.html), [Mykel J. Kochenderfer](https://dblp.org/pid/34/2029.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_34) Flexible Computational Pipelines for Robust Abstraction-Based Control Synthesis.
 	[Eric S. Kim](https://dblp.org/pid/151/6509.html), [Murat Arcak](https://dblp.org/pid/94/6666.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_5) Clock Bound Repair for Timed Systems.
 	[Martin Kölbl](https://dblp.org/pid/221/1706.html), [Stefan Leue](https://dblp.org/pid/20/6822.html), [Thomas Wies](https://dblp.org/pid/23/5398.html)
-	Implemented in [[TarTar]]
+	✅ Implemented in [[TarTar]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_6) Verifying Asynchronous Interactions via Communicating Session Automata.
 	[Julien Lange](https://dblp.org/pid/96/7159.html), [Nobuko Yoshida](https://dblp.org/pid/29/3650.html)
-	Implemented in [[KMC]]
+	✅ Implemented in [[KMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_22) [[Cerberus-BMC]] - A Principled Reference Semantics and Exploration Tool for Concurrent and Sequential C.
 	[Stella Lau](https://dblp.org/pid/244/8329.html), [Victor B. F. Gomes](https://dblp.org/pid/139/0605.html), [Kayvan Memarian](https://dblp.org/pid/28/10810.html), [Jean Pichon-Pharabod](https://dblp.org/pid/160/7730.html), [Peter Sewell](https://dblp.org/pid/74/185.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_31) [[STAMINA]] - STochastic Approximate Model-Checker for INfinite-State Analysis.
 	[Thakur Neupane](https://dblp.org/pid/234/8759.html), [Chris J. Myers](https://dblp.org/pid/89/3161.html), [Curtis Madsen](https://dblp.org/pid/02/7594.html), [Hao Zheng](https://dblp.org/pid/31/6916-1.html), [Zhen Zhang](https://dblp.org/pid/19/5112-6.html)
+	⚙️
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_17) Overfitting in Synthesis - Theory and Practice.
 	[Saswat Padhi](https://dblp.org/pid/180/8207.html), [Todd D. Millstein](https://dblp.org/pid/93/4679.html), [Aditya V. Nori](https://dblp.org/pid/n/AdityaVNori.html), [Rahul Sharma](https://dblp.org/pid/22/846-1.html)
-	Implemented [[PLearn]] and extended [[LoopInvGen]] with HEnum
+	✅ Implemented [[PLearn]] and extended [[LoopInvGen]] with HEnum
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_2) Abstraction Refinement Algorithms for Timed Automata.
 	[Victor Roussanaly](https://dblp.org/pid/241/5977.html), [Ocan Sankur](https://dblp.org/pid/11/7805.html), [Nicolas Markey](https://dblp.org/pid/m/NicolasMarkey.html)
-	Implemented two algorithms, no names. Uses [[CUDD]], [[Uppaal DBM library]]
+	✅ Implemented two algorithms, no names. Uses [[CUDD]], [[Uppaal DBM library]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_9) Property Directed Self Composition.
 	[Ron Shemer](https://dblp.org/pid/241/5907.html), [Arie Gurfinkel](https://dblp.org/pid/44/3532.html), [Sharon Shoham](https://dblp.org/pid/92/128.html), [Yakir Vizel](https://dblp.org/pid/86/2578.html)
-	Implemented the [[PDSC]] algorithm, no name for implementation, uses [[Z3]], [[Spacer]]
+	✅ Implemented the [[PDSC]] algorithm, no name for implementation, uses [[Z3]], [[Spacer]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_16) Membership-Based Synthesis of Linear Hybrid Automata.
 	[Miriam García Soto](https://dblp.org/pid/132/1936.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html), [Christian Schilling](https://dblp.org/pid/72/2103-1.html), [Luka Zeleznik](https://dblp.org/pid/244/8265.html)
-	Implementation of algorithm, no name, uses [[pplpy]]
+	✅ Implementation of algorithm, no name, uses [[pplpy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_8) Quantitative Mitigation of Timing Side Channels.
 	[Saeid Tizpaz-Niari](https://dblp.org/pid/195/5725.html), [Pavol Cerný](https://dblp.org/pid/34/6556.html), [Ashutosh Trivedi](https://dblp.org/pid/06/5756.html)
-	Implemented in [[SCHMIT]]
+	✅ Implemented in [[SCHMIT]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_30) Symbolic Monitoring Against Specifications Parametric in Time and Data.
 	[Masaki Waga](https://dblp.org/pid/182/1837.html), [Étienne André](https://dblp.org/pid/49/2992.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html)
-	Implemented in [[SyMon]]
+	✅ Implemented in [[SyMon]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_23) Multi-armed Bandits for Boolean Connectives in Hybrid System Falsification.
 	[Zhenya Zhang](https://dblp.org/pid/98/4896.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html), [Paolo Arcaini](https://dblp.org/pid/86/7855.html)
-	Implemented two algorithms MAB-UCB and MAB-ε-greedy, uses [[Breach]]
+	✅ Implemented two algorithms MAB-UCB and MAB-ε-greedy, uses [[Breach]]
