Added tool pages starting with J

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -49,9 +49,9 @@
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_19) Model Generation for Quantified Formulas - A Taint-Based Approach.
 	[Benjamin Farinier](https://dblp.org/pid/215/4462.html), [Sébastien Bardin](https://dblp.org/pid/b/SebastienBardin.html), [Richard Bonichon](https://dblp.org/pid/75/3724.html), [Marie-Laure Potet](https://dblp.org/pid/37/5694.html)
 	✅ Implemented in [[TFML]]
--	[🔓](https://doi.org/10.1007/978-3-319-96142-2_3) The [[JKind]] Model Checker.
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_3) The JKind Model Checker.
 	[Andrew Gacek](https://dblp.org/pid/84/6151.html), [John Backes](https://dblp.org/pid/97/8857.html), [Mike Whalen](https://dblp.org/pid/70/5189.html), [Lucas G. Wagner](https://dblp.org/pid/94/7566.html), [Elaheh Ghassabani](https://dblp.org/pid/172/4689.html)
-	⚙️
+	✅ Tool: [[JKind]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_31) Inner and Outer Approximating Flowpipes for Delay Differential Equations.
 	[Eric Goubault](https://dblp.org/pid/90/1132.html), [Sylvie Putot](https://dblp.org/pid/61/1269.html), [Lorenz Sahlmann](https://dblp.org/pid/223/5310.html)
 	⚙️
