Added tool pages LoopInvGen, Manthan, Mapping Synthesis Tool, and MathSAT 5

--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -73,9 +73,9 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_12) Automated Synthesis of Secure Platform Mappings.
 	[Eunsuk Kang](https://dblp.org/pid/49/2420.html), [Stéphane Lafortune](https://dblp.org/pid/22/3097.html), [Stavros Tripakis](https://dblp.org/pid/85/6852.html)
 	✅ Implemented as [[Mapping Synthesis Tool]]
--	[🔓](https://doi.org/10.1007/978-3-030-25540-4_26) The [[Marabou]] Framework for Verification and Analysis of Deep Neural Networks.
+-	[🔓](https://doi.org/10.1007/978-3-030-25540-4_26) The Marabou Framework for Verification and Analysis of Deep Neural Networks.
 	[Guy Katz](https://dblp.org/pid/23/10321.html), [Derek A. Huang](https://dblp.org/pid/244/8209.html), [Duligur Ibeling](https://dblp.org/pid/220/3264.html), [Kyle Julian](https://dblp.org/pid/195/5867.html), [Christopher Lazarus](https://dblp.org/pid/180/3521.html), [Rachel Lim](https://dblp.org/pid/127/9695.html), [Parth Shah](https://dblp.org/pid/147/1126.html), [Shantanu Thakoor](https://dblp.org/pid/218/7437.html), [Haoze Wu](https://dblp.org/pid/195/8725-1.html), [Aleksandar Zeljic](https://dblp.org/pid/147/5994.html), [David L. Dill](https://dblp.org/pid/d/DavidLDill.html), [Mykel J. Kochenderfer](https://dblp.org/pid/34/2029.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html)
-	⚙️
+	✅ Implemented [[Marabou]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_34) Flexible Computational Pipelines for Robust Abstraction-Based Control Synthesis.
 	[Eric S. Kim](https://dblp.org/pid/151/6509.html), [Murat Arcak](https://dblp.org/pid/94/6666.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
 	⚙️
