--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -51,9 +51,9 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_29) Synthesizing JIT Compilers for In-Kernel DSLs.
 	[Jacob Van Geffen](https://dblp.org/pid/190/7037.html), [Luke Nelson](https://dblp.org/pid/194/6735.html), [Isil Dillig](https://dblp.org/pid/85/3688.html), [Xi Wang](https://dblp.org/pid/08/5760-5.html), [Emina Torlak](https://dblp.org/pid/55/1457.html)
 	✅ Implemented in [[JitSynth]]
--	[🔓](https://doi.org/10.1007/978-3-030-53291-8_31) [[Manthan]] - A Data-Driven Approach for Boolean Function Synthesis.
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_31) Manthan - A Data-Driven Approach for Boolean Function Synthesis.
 	[Priyanka Golia](https://dblp.org/pid/265/6125.html), [Subhajit Roy](https://dblp.org/pid/95/621.html), [Kuldeep S. Meel](https://dblp.org/pid/129/1623.html)
-	⚙️
+	✅ Implemented [[Manthan]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_16) Certifying Certainty and Uncertainty in Approximate Membership Query Structures.
 	[Kiran Gopinathan](https://dblp.org/pid/218/7694.html), [Ilya Sergey](https://dblp.org/pid/77/9770.html)
 	✅ Implemented [[Ceramist]]
