Sort out all items in CAV 2018

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -15,31 +15,31 @@
 	✅ Implemented in [[Span]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_6) [[StringFuzz]] - A Fuzzer for String Solvers.
 	[Dmitry Blotsky](https://dblp.org/pid/223/5185.html), [Federico Mora](https://dblp.org/pid/82/5093.html), [Murphy Berzish](https://dblp.org/pid/180/5429.html), [Yunhui Zheng](https://dblp.org/pid/47/702.html), [Ifaz Kabir](https://dblp.org/pid/202/2276.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
-	⚙️
+	✅ Introduces [[StringFuzz]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_23) On the Completeness of Verifying Message Passing Programs Under Bounded Asynchrony.
 	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Kailiang Ji](https://dblp.org/pid/166/0923.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_21) Reasoning About TSO Programs Using Reduction and Abstraction.
 	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Suha Orhun Mutluergil](https://dblp.org/pid/170/4198.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html)
 	✅ Checked soundness of abstractions with CIVL
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_13) Symbolic Algorithms for Graphs and Markov Decision Processes with Fairness Objectives.
 	[Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Monika Henzinger](https://dblp.org/pid/h/MonikaRauchHenzinger.html), [Veronika Loitzenbauer](https://dblp.org/pid/132/9047.html), [Simin Oraee](https://dblp.org/pid/218/5331.html), [Viktor Toman](https://dblp.org/pid/215/3408.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_29) Android Stack Machine.
 	[Taolue Chen](https://dblp.org/pid/28/4743.html), [Jinlong He](https://dblp.org/pid/204/0042.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Guozhen Wang](https://dblp.org/pid/223/5357.html), [Zhilin Wu](https://dblp.org/pid/71/3710.html), [Jun Yan](https://dblp.org/pid/89/5901.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_4) The [[DEEPSEC]] Prover.
 	[Vincent Cheval](https://dblp.org/pid/62/8336.html), [Steve Kremer](https://dblp.org/pid/k/SteveKremer.html), [Itsaka Rakotonirina](https://dblp.org/pid/223/5215.html)
-	⚙️
+	✅ Introduces [[DEEPSEC]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_26) Continuous Formal Verification of Amazon s2n.
 	[Andrey Chudnov](https://dblp.org/pid/94/3130.html), [Nathan Collins](https://dblp.org/pid/65/10809.html), [Byron Cook](https://dblp.org/pid/36/113.html), [Joey Dodds](https://dblp.org/pid/223/5187.html), [Brian Huffman](https://dblp.org/pid/69/3465.html), [Colm MacCárthaigh](https://dblp.org/pid/223/4997.html), [Stephen Magill](https://dblp.org/pid/30/5360.html), [Eric Mertens](https://dblp.org/pid/143/2709.html), [Eric Mullen](https://dblp.org/pid/19/9842.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html), [Aaron Tomb](https://dblp.org/pid/91/466.html), [Eddy Westbrook](https://dblp.org/pid/223/5374.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_28) Model Checking Boot Code from AWS Data Centers.
 	[Byron Cook](https://dblp.org/pid/36/113.html), [Kareem Khazem](https://dblp.org/pid/178/2891.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html), [Michael Tautschnig](https://dblp.org/pid/18/1323.html), [Mark R. Tuttle](https://dblp.org/pid/t/MarkRTuttle.html)
 	✅ Implemented in [[CBMC]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_8) Program Analysis Is Harder Than Verification - A Computability Perspective.
 	[Patrick Cousot](https://dblp.org/pid/c/PCousot.html), [Roberto Giacobazzi](https://dblp.org/pid/g/RobertoGiacobazzi.html), [Francesco Ranzato](https://dblp.org/pid/r/FRanzato.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_14) Attracting Tangles to Solve Parity Games.
 	[Tom van Dijk](https://dblp.org/pid/126/8210.html)
 	✅ Implemented in [[Oink]]
@@ -54,7 +54,7 @@
 	✅ Tool: [[JKind]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_31) Inner and Outer Approximating Flowpipes for Delay Differential Equations.
 	[Eric Goubault](https://dblp.org/pid/90/1132.html), [Sylvie Putot](https://dblp.org/pid/61/1269.html), [Lorenz Sahlmann](https://dblp.org/pid/223/5310.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_2) MaxSMT-Based Type Inference for Python 3.
 	[Mostafa Hassan](https://dblp.org/pid/223/5094.html), [Caterina Urban](https://dblp.org/pid/130/9842.html), [Marco Eilers](https://dblp.org/pid/217/4745.html), [Peter Müller](https://dblp.org/pid/m/PMuller1.html)
 	✅ Tool: [[Typpete]]
@@ -63,7 +63,7 @@
 	✅ Built on top of [[dReal]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_5) [[SimpleCAR]] - An Efficient Bug-Finding Tool Based on Approximate Reachability.
 	[Jianwen Li](https://dblp.org/pid/21/8669.html), [Rohit Dureja](https://dblp.org/pid/208/7416.html), [Geguang Pu](https://dblp.org/pid/33/1678.html), [Kristin Yvonne Rozier](https://dblp.org/pid/67/519.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html)
-	⚙️
+	✅ Introduces [[SimpleCAR]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_22) Quasi-Optimal Partial Order Reduction.
 	[Huyen T. T. Nguyen](https://dblp.org/pid/215/3598.html), [César Rodríguez](https://dblp.org/pid/74/9958.html), [Marcelo Sousa](https://dblp.org/pid/123/7772.html), [Camille Coti](https://dblp.org/pid/78/4708.html), [Laure Petrucci](https://dblp.org/pid/p/LaurePetrucci.html)
 	✅ Implemented in [[DPU]]
@@ -75,22 +75,22 @@
 	✅ Implemented as extension of [[CADET]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_18) The Proof Complexity of SMT Solvers.
 	[Robert Robere](https://dblp.org/pid/122/2714.html), [Antonina Kolokolova](https://dblp.org/pid/91/5785.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_27) Symbolic Liveness Analysis of Real-World Software.
 	[Daniel Schemmel](https://dblp.org/pid/119/0975.html), [Julian Büning](https://dblp.org/pid/223/5126.html), [Oscar Soria Dustmann](https://dblp.org/pid/89/8919.html), [Thomas Noll](https://dblp.org/pid/31/248-1.html), [Klaus Wehrle](https://dblp.org/pid/w/KlausWehrle.html)
 	✅ Implemented in [[Symbolic Liveness Analysis]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_25) Formal Verification of a Vehicle-to-Vehicle (V2V) Messaging System.
 	[Mark Tullsen](https://dblp.org/pid/95/6125.html), [Lee Pike](https://dblp.org/pid/p/LeePike.html), [Nathan Collins](https://dblp.org/pid/65/10809.html), [Aaron Tomb](https://dblp.org/pid/91/466.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_30) Formally Verified Montgomery Multiplication.
 	[Christoph Walther](https://dblp.org/pid/w/ChristophWalther.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_11) Lazy Self-composition for Security Verification.
 	[Weikun Yang](https://dblp.org/pid/167/0229.html), [Yakir Vizel](https://dblp.org/pid/86/2578.html), [Pramod Subramanyan](https://dblp.org/pid/27/8110.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html), [Sharad Malik](https://dblp.org/pid/79/6934.html)
 	✅ Implemented [[IFC-CEGAR]] and [[IFC-BMC]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_20) Partial Order Aware Concurrency Sampling.
 	[Xinhao Yuan](https://dblp.org/pid/70/10355.html), [Junfeng Yang](https://dblp.org/pid/71/3724.html), [Ronghui Gu](https://dblp.org/pid/155/8148.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_12) [[SCInfer]] - Refinement-Based Verification of Software Countermeasures Against Side-Channel Attacks.
 	[Jun Zhang](https://dblp.org/pid/29/4190.html), [Pengfei Gao](https://dblp.org/pid/147/0949.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Chao Wang](https://dblp.org/pid/w/ChaoWang.html)
-	⚙️
+	✅ Introduces [[SCInfer]]
