Clean up CAV 2019

--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -6,7 +6,7 @@
 	✅ Implemented as an extension of [[PRISM-games]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_36) Run-Time Optimization for Learned Controllers Through Quantitative Games.
 	[Guy Avni](https://dblp.org/pid/07/10110.html), [Roderick Bloem](https://dblp.org/pid/80/1300.html), [Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html), [Bettina Könighofer](https://dblp.org/pid/117/3735.html), [Stefan Pranger](https://dblp.org/pid/244/8267.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_4) Safety and Co-safety Comparator Automata for Discounted-Sum Inclusion.
 	[Suguman Bansal](https://dblp.org/pid/217/4777.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html)
 	✅ Implemented in [[QuIPFly]]
@@ -15,10 +15,10 @@
 	✅ Implemented a prototype but it doesn't have a name
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_28) Semi-quantitative Abstraction and Analysis of Chemical Reaction Networks.
 	[Milan Ceska](https://dblp.org/pid/213/3728.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_21) Extending [[nuXmv]] with Timed Transition Systems and Timed Temporal Properties.
 	[Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Enrico Magnago](https://dblp.org/pid/244/8257.html), [Marco Roveri](https://dblp.org/pid/83/563.html), [Stefano Tonetta](https://dblp.org/pid/t/StefanoTonetta.html)
-	⚙️
+	✅ Introduces [[nuXmv]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_7) Verifying Hyperliveness.
 	[Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [César Sánchez](https://dblp.org/pid/38/1858.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	✅ Implemented in [[MCHyper]], and a tool without a name for the synthesis of strategies and reactive systems from hyperproperties that uses [[Z3]]
@@ -33,19 +33,19 @@
 	✅ Implemented approaches, Uses CAQE and MaxCount for solving synthesis instances
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_25) [[VerifAI]] - A Toolkit for the Formal Design and Analysis of Artificial Intelligence-Based Systems.
 	[Tommaso Dreossi](https://dblp.org/pid/117/9140.html), [Daniel J. Fremont](https://dblp.org/pid/144/7602.html), [Shromona Ghosh](https://dblp.org/pid/164/5676.html), [Edward Kim](https://dblp.org/pid/06/445.html), [Hadi Ravanbakhsh](https://dblp.org/pid/134/9799.html), [Marcell Vazquez-Chanlatte](https://dblp.org/pid/192/1518.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	⚙️
+	✅ Introduces [[VerifAI]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_15) Efficient Synthesis with Probabilistic Constraints.
 	[Samuel Drews](https://dblp.org/pid/182/9259.html), [Aws Albarghouthi](https://dblp.org/pid/90/8295.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html)
 	✅ Implemented their algorithm [[τ-DIGITS]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_10) Security-Aware Synthesis Using Delayed-Action Games.
 	[Mahmoud Elfar](https://dblp.org/pid/198/8166.html), [Yu Wang](https://dblp.org/pid/02/5889-44.html), [Miroslav Pajic](https://dblp.org/pid/74/7446.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_11) Automated Hypersafety Verification.
 	[Azadeh Farzan](https://dblp.org/pid/89/148.html), [Anthony Vandikas](https://dblp.org/pid/241/7113.html)
 	✅ Tool: [[Weaver]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_24) [[StreamLAB]] - Stream-based Monitoring of Cyber-Physical Systems.
 	[Peter Faymonville](https://dblp.org/pid/05/7445.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Malte Schledjewski](https://dblp.org/pid/244/8206.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Marvin Stenger](https://dblp.org/pid/189/1078.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html), [Hazem Torfah](https://dblp.org/pid/140/9733.html)
-	⚙️
+	✅ Introduces [[StreamLAB]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_14) Quantified Invariants via Syntax-Guided Synthesis.
 	[Grigory Fedyukovich](https://dblp.org/pid/43/8810.html), [Sumanth Prabhu](https://dblp.org/pid/206/6798-1.html), [Kumar Madhukar](https://dblp.org/pid/134/8956.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html)
 	✅ Implemented in [[FreqHorn]]
@@ -69,7 +69,7 @@
 	✅ Implemented in [[NOPE]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_32) Local and Compositional Reasoning for Optimized Reactive Systems.
 	[Mitesh Jain](https://dblp.org/pid/133/8487.html), [Panagiotis Manolios](https://dblp.org/pid/40/4888.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_12) Automated Synthesis of Secure Platform Mappings.
 	[Eunsuk Kang](https://dblp.org/pid/49/2420.html), [Stéphane Lafortune](https://dblp.org/pid/22/3097.html), [Stavros Tripakis](https://dblp.org/pid/85/6852.html)
 	✅ Implemented as [[Mapping Synthesis Tool]]
@@ -78,7 +78,7 @@
 	✅ Implemented [[Marabou]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_34) Flexible Computational Pipelines for Robust Abstraction-Based Control Synthesis.
 	[Eric S. Kim](https://dblp.org/pid/151/6509.html), [Murat Arcak](https://dblp.org/pid/94/6666.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_5) Clock Bound Repair for Timed Systems.
 	[Martin Kölbl](https://dblp.org/pid/221/1706.html), [Stefan Leue](https://dblp.org/pid/20/6822.html), [Thomas Wies](https://dblp.org/pid/23/5398.html)
 	✅ Implemented in [[TarTar]]
@@ -87,10 +87,10 @@
 	✅ Implemented in [[KMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_22) [[Cerberus-BMC]] - A Principled Reference Semantics and Exploration Tool for Concurrent and Sequential C.
 	[Stella Lau](https://dblp.org/pid/244/8329.html), [Victor B. F. Gomes](https://dblp.org/pid/139/0605.html), [Kayvan Memarian](https://dblp.org/pid/28/10810.html), [Jean Pichon-Pharabod](https://dblp.org/pid/160/7730.html), [Peter Sewell](https://dblp.org/pid/74/185.html)
-	⚙️
+	✅ Introduces [[Cerberus-BMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_31) [[STAMINA]] - STochastic Approximate Model-Checker for INfinite-State Analysis.
 	[Thakur Neupane](https://dblp.org/pid/234/8759.html), [Chris J. Myers](https://dblp.org/pid/89/3161.html), [Curtis Madsen](https://dblp.org/pid/02/7594.html), [Hao Zheng](https://dblp.org/pid/31/6916-1.html), [Zhen Zhang](https://dblp.org/pid/19/5112-6.html)
-	⚙️
+	✅ Introduces [[STAMINA]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_17) Overfitting in Synthesis - Theory and Practice.
 	[Saswat Padhi](https://dblp.org/pid/180/8207.html), [Todd D. Millstein](https://dblp.org/pid/93/4679.html), [Aditya V. Nori](https://dblp.org/pid/n/AdityaVNori.html), [Rahul Sharma](https://dblp.org/pid/22/846-1.html)
 	✅ Implemented [[PLearn]] and extended [[LoopInvGen]] with HEnum
